...
        android:layout_height="wrap_content"
        android:layout_below="@+id/lecture_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/add_lecture_button"
        android:layout_toEndOf="@+id/add_lecture_button"
        android:duplicateParentState="true"
        android:textAppearance="@style/TextAppearance.Koin.Regular.13"
        android:textColor="@color/black"
        tools:text="화7A,7B 인문대학 314" />

    <TextView
        android:id="@+id/lecture_infromation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lecture_information1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
...
