...
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:id="@+id/timetable_select_semester_linearlayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="9dp"
...


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/timetable_save_timetable_image_linearlayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="9dp"
...
