...
        android:id="@+id/select_major_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="전공선택"
        android:textAppearance="@style/TextAppearance.Koin.Regular.15"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/select_major_computer_engineering"
        android:layout_width="132dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/select_major_mechanical_engineering"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_rect_white_radius_13dp"
...
