...
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Koin.Regular.15"
            android:textColor="@color/black"
            tools:text="저장" />

        <TextView
            android:id="@+id/timetable_select_semester_bottom_sheet_center_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="학기선택"
            android:textAppearance="@style/TextAppearance.Koin.Medium.15"
...
